# SecureSoftwareResit

./: AuthenticationInfo.cpp  AuthenticationInfo.h  Authenticator.cpp  Authenticator.h  BinFileLogger.cpp  BinFileLogger.h  CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  Logger.cpp  Logger.h  LoggerDecorator.cpp  LoggerDecorator.h  Permission.cpp  Permission.h  ProofOfID.cpp  ProofOfID.h  Resource.cpp  Resource.h  ResourceFactory.cpp  ResourceFactory.h  Role.cpp  Role.h  Source.cpp  Subject.cpp  Subject.h  TxtFileLogger.cpp  TxtFileLogger.h  User.cpp  User.h
